left menu z-index fixed

--- a/frontend/web/css/site.css
+++ b/frontend/web/css/site.css
@@ -19,6 +19,9 @@ body {
 .content-main {
     padding-left: 200px;
 }
+.content-menu {
+   z-index: 10;
+}
 
 /* login */
 .login-form {
